--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
 <title>HRMS Registration</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+<link rel="icon" href="assets/images/HRMS.png" type="image/png">
 
 <style>
 :root {
